Kubeneretes-school/k8s-DEMO/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace

apiVersion: v1
kind: ServiceAccount
metadata:
  name: my-service-account
  namespace: my-namespace
