Kubeneretes-school/k8s-DEMO/ansible-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ansible
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ansible
  template:
    metadata:
      labels:
        app: ansible
    spec:
      containers:
      - name: ansible
        image: ansible/ansible:ubuntu1404
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/ansible"
          name: ansible-storage
      volumes:
      - name: ansible-storage
        persistentVolumeClaim:
          claimName: ansible-pvc
