Kubeneretes-school/k8s-DEMO/multiple-pod.yaml
# Pod 1
apiVersion: v1
kind: Pod
metadata:
  name: nginix-1
spec:
  containers:
  - name: container-1
    image: nginx
    imagePullPolicy: Always
    resources:
      limits:
        cpu: 1.0m
        memory: 256Mi

# Pod 2
---
apiVersion: v1
kind: Pod
metadata:
  name: packer-1
spec:
  containers:
  - name: container-2
    image: hashicorp/terraform:latest
    imagePullPolicy: Always
    resources:
      limits:
        cpu: 1.0m
        memory: 256Mi

apiVersion: v1
kind: Pod
metadata:
  name: terraform-pod
spec:
  containers:
  - name: terraform-container
    image: hashicorp/terraform:latest
    imagePullPolicy: Always
    resources:
      limits:
        cpu: 1.0m
        memory: 256Mi 
    command: ["/bin/sleep", "infinity"]

apiVersion: v1
kind: Pod
metadata:
  name: centos-pod
spec:
  containers:
  - name: centos-container
    image: centos:latest
    imagePullPolicy: Always
    resources:
      limits:
        cpu: 1.0m
        memory: 256Mi 
    command: ["/bin/sleep", "infinity"]
