Kubeneretes-school/k8s-DEMO/my-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  serviceAccountName: my-service-account
  containers:
  - name: my-container
    image: nginx
    securityContext:
      seccompProfile:
