Kubeneretes-school/k8s-DEMO/ansible-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ansible-service
spec:
  selector:
    app: ansible
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
