Kubeneretes-school/k8s-DEMO/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  selector:
    app: jenkins
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
