Kubeneretes-school/k8s-DEMO/loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: My-App
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
